--- a/books/handson_ml/environment.yml
+++ b/books/handson_ml/environment.yml
@@ -1,4 +1,4 @@
-name: homl3
+name: homl
 channels:
   - conda-forge
   - defaults
@@ -31,15 +31,15 @@ dependencies:
   - widgetsnbextension=4.0  # interactive HTML widgets for Jupyter notebooks
   - pip:
     - keras-tuner~=1.1.3  # used in chapters 10 and 19 for hyperparameter tuning
-    - tensorboard-plugin-profile~=2.8.0  # profiling plugin for TensorBoard
-    - tensorboard~=2.10.0  # TensorFlow's visualization toolkit
-    - tensorflow-addons~=0.17.1  # used in chapters 11 & 16 (for AdamW & seq2seq)
-    - tensorflow-datasets~=4.6.0  # datasets repository, ready to use
-    - tensorflow-hub~=0.12.0  # trained ML models repository, ready to use
-    - tensorflow-serving-api~=2.10.0  # or tensorflow-serving-api-gpu if gpu
-    - tensorflow~=2.10.0  # Deep Learning library
-    - transformers~=4.21.3  # Natural Language Processing lib for TF or PyTorch
+    - tensorboard-plugin-profile  # profiling plugin for TensorBoard
+    - tensorboard  # TensorFlow's visualization toolkit
+    - tensorflow-addons  # used in chapters 11 & 16 (for AdamW & seq2seq)
+    - tensorflow-datasets  # datasets repository, ready to use
+    - tensorflow-hub  # trained ML models repository, ready to use
+    - tensorflow-serving-api  # or tensorflow-serving-api-gpu if gpu
+    - tensorflow  # Deep Learning library
+    - transformers  # Natural Language Processing lib for TF or PyTorch
     - urlextract~=1.6.0  # optionally used in chapter 3, exercise 4
-    - gym[classic_control,atari,accept-rom-license]~=0.26.1  # used only in ch18
+    - gym[classic_control,atari,accept-rom-license]  # used only in ch18
     - google-cloud-aiplatform~=1.17.0  # used only in chapter 19
     - google-cloud-storage~=2.5.0  # used only in chapter 19
